@@ -29,8 +29,8 @@
 ;
 ; ringall - ring all available channels until one answers (default)
 ; roundrobin - take turns ringing each available interface 
-; leastrecent - ring interface which least recently had a call
-; fewestcalls - ring interface which has had fewest completed calls
+; leastrecent - ring interface which was least recently called by this queue
+; fewestcalls - ring the one with fewest completed calls from this queue
 ; random - ring random interface
 ;
 ;strategy = ringall
